--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,12 +7,38 @@
 <title>Catering Project</title>
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <script src="js/bootstrap.min.js"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
-
+	function changeToHome() {
+		document.getElementById("Container").innerHTML = '';
+		var button1 =document.getElementById("button1");
+		button1.onclick="";
+		button1.textContent="";
+		button1.hidden=true;
+		var button2 =document.getElementById("button2");
+		button2.onclick="";
+		button2.textContent="";
+		button2.hidden=true;
+	};
+	
+	function changeToIngredient() {
+		var button1 =document.getElementById("button1");
+		button1.onclick=getAllIngredients;
+		button1.textContent="Get All Ingredients";
+		button1.hidden=false;
+		var button2 =document.getElementById("button2");
+		button2.onclick=postIngredient;
+		button2.textContent="Add Dummy Ingredient";
+		button2.hidden=false;
+	};
+	
 	function getAllIngredients() {
 		getDataList("ingredient");
+		
+	};
+	
+	function postIngredient() {
+		postData("ingredient",'{"name":"Onion","type":"Vegetable","unitType":"Piece","caloriePerUnit":0.10}');
 		
 	};
 
@@ -20,10 +46,10 @@
 		var xhttp = new XMLHttpRequest();
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 202) {
-				document.getElementById("demo").innerHTML = this.responseText;
+				document.getElementById("Container").innerHTML = this.responseText+". Dummy Item Added";
 			}
 		};
-		xhttp.open("POST", "http://localhost:8081/api/" + api, true);
+		xhttp.open("POST", "http://localhost:8082/api/" + api, true);
 		xhttp.setRequestHeader("Content-type", "application/json");
 		xhttp.send(data);
 	}
@@ -32,29 +58,29 @@
 		var myObj, x, txt = "";
 		var xhttp = new XMLHttpRequest();
 		var container = document.getElementById("Container");
+		container.innerHTML = '';
 		
 		xhttp.onreadystatechange = function() {
 			if (this.readyState == 4 && this.status == 200) {
-				myObj = JSON.parse(this.responseText);
+				myArr = JSON.parse(this.responseText);
 				alert(this.responseText);
 				var table = document.createElement("Table");
-				for (x in myObj) {
+				for (x in myArr) {
+					var myObj = myArr[x];
 					var row = document.createElement("TR");
-					for(y in myObj[x]) {
-						alert(y.lenght);
+					for(y in myObj) {
 						var col = document.createElement("TD");
-						var textNode = createTextNode("deneme");
+						var textNode = document.createTextNode(myObj[y]);
 						col.appendChild(textNode);
 						row.appendChild(col);
 					};
 					table.appendChild(row);
 				};
+				table.className='table table-striped table-bordered table-hover';
 				container.appendChild(table);
-				document.body.appendChild(table);
-				alert("deneme");
 			};
 		};
-		xhttp.open("GET", "http://localhost:8081/api/" + api);
+		xhttp.open("GET", "http://localhost:8082/api/" + api);
 		xhttp.setRequestHeader("Content-type", "application/json");
 		xhttp.send();
 	}
@@ -66,40 +92,27 @@
 </script>
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  <a class="navbar-brand" href="#">Navbar</a>
-	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-	    <span class="navbar-toggler-icon"></span>
-	  </button>
-	  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-	    <ul class="navbar-nav">
-	      <li class="nav-item active">
-	        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#">Features</a>
-	      </li>
-	      <li class="nav-item">
-	        <a class="nav-link" href="#" onclick="getAllIngredients()">Ingredients</a>
-	      </li>
-	      <li class="nav-item dropdown">
-	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	          Ingredients
-	        </a>
-	        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-	          <a class="dropdown-item" href="#">Action</a>
-	          <a class="dropdown-item" href="#">Another action</a>
-	          <a class="dropdown-item" href="#">Something else here</a>
-	        </div>
-	      </li>
+	<nav class="navbar navbar-default">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">ITPH - Fase2 - Catering Project</a>
+	    </div>
+	    <ul class="nav navbar-nav">
+	      <li class="active"><a href="#" onclick="changeToHome()">Home</a></li>
+	      <li><a href="#">Page 1</a></li>
+	      <li><a href="#">Page 2</a></li>
+	      <li><a href="#" onclick="changeToIngredient()">Ingredient</a></li>
 	    </ul>
 	  </div>
 	</nav>
 	<div class="container-fluid">
-        <button onclick="getAllIngredients()">SS</button>
-    </div>
-	<div id="Container" class="container-fluid">
-        
+		<div class="row">
+			<button id="button1" hidden="true"></button>
+	        <button id="button2" hidden="true"></button>
+        </div>
+		<div id="Container" class="row">
+	        
+        </div>
     </div>
 </body>
 </html>
