--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,6 +22,8 @@
 		var dropdownSort =document.getElementById("dropdownSort");
 		button2.innerHTML="";
 		button2.hidden=true;
+		dropdownSortDesc.hidden=true;
+		dropdownSort.hidden=true;
 	};
 	
 	function changeToIngredient() {
@@ -36,6 +38,14 @@
 	};
 	
 	function getAllIngredients() {
+		var dropdownSort =document.getElementById("dropdownSort");
+		dropdownSort.onchange = getAllIngredientsSorted;
+		dropdownSort.hidden=false;
+		dropdownSort.innerHTML = '';
+		var dropdownSortDesc =document.getElementById("dropdownSortDesc");
+		dropdownSortDesc.onchange = getAllIngredientsSorted;
+		dropdownSortDesc.hidden=false;
+		dropdownSortDesc.value="Ascending";
 		getDataList("ingredient");
 		
 	};
@@ -44,9 +54,10 @@
 		var key = document.getElementById("dropdownSort").value;
 		var desc = document.getElementById("dropdownSortDesc").value;
 		if(desc=="Descending")
-			getDataListSorted("ingredient",key,true);
+			getDataListSorted("ingredient",key,true,false);
 		else
-			getDataListSorted("ingredient",key,false);
+			getDataListSorted("ingredient",key,false,false);
+		document.getElementById("dropdownSort").value = key;
 		
 	};
 	
@@ -72,50 +83,10 @@
 	}
 	
 	function getDataList(api) {
-		var myObj, myArr, x, txt = "";
-		var xhttp = new XMLHttpRequest();
-		var container = document.getElementById("Container");
-		container.innerHTML = '';
-		
-		var dropdownSort =document.getElementById("dropdownSort");
-		dropdownSort.onchange = getAllIngredientsSorted;
-		dropdownSort.hidden=false;
-		var dropdownSortDesc =document.getElementById("dropdownSortDesc");
-		dropdownSortDesc.onchange = getAllIngredientsSorted;
-		dropdownSortDesc.hidden=false;
-		
-		xhttp.onreadystatechange = function() {
-			if (this.readyState == 4 && this.status == 200) {
-				myArr = JSON.parse(this.responseText);
-				myArr = sortArray(myArr,"id", false);
-				var table = document.createElement("Table");
-				for (x in myArr) {
-					var myObj = myArr[x];
-					var row = document.createElement("TR");
-					for(y in myObj) {
-						var col = document.createElement("TD");
-						var textNode = document.createTextNode(myObj[y]);
-						col.appendChild(textNode);
-						row.appendChild(col);
-						if(x==0){
-							var option = document.createElement("OPTION");
-							var optionText = document.createTextNode(y);
-							option.appendChild(optionText);
-							option.value=y;
-							dropdownSort.appendChild(option);
-						};
-					};
-					table.appendChild(row);
-				};
-				table.className='table table-striped table-bordered table-hover';
-				container.appendChild(table);
-			};
-		};
-		xhttp.open("GET", "http://localhost:8082/api/" + api);
-		xhttp.setRequestHeader("Content-type", "application/json");
-		xhttp.send();
+		getDataListSorted(api,"id",false,true);
 	}
-	function getDataListSorted(api,key,sort) {
+	
+	function getDataListSorted(api,key,sort, firstTime) {
 		var myObj, myArr, x, txt = "";
 		var xhttp = new XMLHttpRequest();
 		var container = document.getElementById("Container");
@@ -125,7 +96,6 @@
 			if (this.readyState == 4 && this.status == 200) {
 				myArr = JSON.parse(this.responseText);
 				myArr = sortArray(myArr,key, sort);
-				alert(myArr); //Just for checking datas - Delete at Final
 				var table = document.createElement("Table");
 				for (x in myArr) {
 					var myObj = myArr[x];
@@ -135,6 +105,13 @@
 						var textNode = document.createTextNode(myObj[y]);
 						col.appendChild(textNode);
 						row.appendChild(col);
+						if(firstTime && x==0){
+							var option = document.createElement("OPTION");
+							var optionText = document.createTextNode(y);
+							option.appendChild(optionText);
+							option.value=y;
+							dropdownSort.appendChild(option);
+						};
 					};
 					table.appendChild(row);
 				};
@@ -183,7 +160,6 @@
             </select>
         </div>
 		<div id="Container" class="row">
-	        
         </div>
     </div>
 </body>
